# meridian-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  PLAN.md  README.md  ROADMAP.md  cliff.toml
.forgejo/workflows/: ci.yml  release.yml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/meridian-boot-common/: Cargo.toml
crates/meridian-boot-common/src/: lib.rs
crates/meridian-compass-render/: Cargo.toml
crates/meridian-compass-render/examples/: wallpaper.rs
crates/meridian-compass-render/src/: assets.rs  lib.rs
crates/meridian-compositor/: Cargo.toml  build.rs
crates/meridian-compositor/src/: decoration.rs  lib.rs  state.rs  workspace.rs
crates/meridian-compositor/src/backend/: clipped_surface.frag  clipped_surface.rs  drm.rs  mod.rs  presentation_feedback.rs  winit.rs
crates/meridian-compositor/src/backend/drm/: gpu.rs  init.rs  init_diagnostics.rs  init_env.rs  login_ipc.rs  mod.rs  mode_selection.rs  render.rs
crates/meridian-compositor/src/backend/drm/render/: layers.rs  stack.rs
crates/meridian-compositor/src/backend/winit/: layers.rs  mod.rs  scene.rs
crates/meridian-compositor/src/cursor/: embedded.rs  image.rs  mod.rs  tests.rs  xcursor.rs
crates/meridian-compositor/src/decoration/: corner_mask_bitmap.rs  icons.rs  mod.rs  model.rs  shadow_bitmap.rs
crates/meridian-compositor/src/decoration/render/: buffers.rs  button_bg_cache.rs  corner_cache.rs  elements.rs  geometry.rs  hit.rs  icon_cache.rs  mod.rs  shadow_cache.rs
crates/meridian-compositor/src/grabs/: move_grab.rs  resize_grab.rs
crates/meridian-compositor/src/grabs/resize_grab/: grab.rs  mod.rs  state.rs
crates/meridian-compositor/src/input/: keyboard.rs  mod.rs  pointer.rs
crates/meridian-compositor/src/input/pointer/: button.rs  mod.rs
crates/meridian-compositor/src/protocols/: mod.rs  output.rs  xdg_shell.rs  xwayland.rs
crates/meridian-compositor/src/state/: client.rs  idle.rs  lock.rs  mod.rs  output_hotplug_tests.rs  output_layout.rs  output_power.rs  output_registry.rs  session_lock_tests.rs  setup.rs  utils.rs  workspace_output_state.rs
crates/meridian-compositor/src/state/handlers/: dmabuf.rs  idle.rs  misc.rs  mod.rs  output_power.rs  screencopy.rs  session_lock.rs  syncobj.rs  wayland_extra.rs
crates/meridian-compositor/src/state/handlers/core/: compositor.rs  grab.rs  layer_shell.rs  mod.rs  shm.rs
crates/meridian-compositor/src/state/handlers/xdg/: lifecycle.rs  mod.rs
crates/meridian-compositor/src/state/handlers/xdg/requests/: grab.rs  mod.rs  state.rs  window.rs
crates/meridian-compositor/src/state/ipc/: broadcast.rs  commands.rs  conversions.rs  launch.rs  mod.rs  screenshot.rs  screenshot_policy.rs  server.rs
crates/meridian-compositor/src/state/layout/: focus.rs  mod.rs  surface.rs  tiling.rs  workspace.rs
crates/meridian-compositor/src/wallpaper/: compose.rs  gpu.rs  manager.rs  mod.rs
crates/meridian-compositor/tests/: layer_shell.rs
crates/meridian-config/: Cargo.toml
crates/meridian-config/src/: config.rs  keybind.rs  lib.rs  output.rs  theme.rs
crates/meridian-config/src/keybind/: defaults.rs  mod.rs  parse.rs
crates/meridian-config/src/theme/: manager.rs  mod.rs
crates/meridian-ipc/: Cargo.toml
crates/meridian-ipc/src/: lib.rs
crates/meridian-lock/: Cargo.toml
crates/meridian-lock/src/: auth.rs  main.rs
crates/meridian-login/: Cargo.toml
crates/meridian-login/config/: meridian-login.pam  meridian-login.service
crates/meridian-login/src/: auth.rs  input.rs  main.rs  render.rs  session.rs
crates/meridian-polkit/: Cargo.toml
crates/meridian-polkit/src/: auth.rs  dbus.rs  main.rs  ui.rs  wayland.rs
crates/meridian-portal/: Cargo.toml
crates/meridian-portal/src/: file_chooser.rs  lib.rs  main.rs
crates/meridian-shell/: Cargo.toml
crates/meridian-shell/src/: app_view.rs  audio.rs  audio_popup.rs  autostart.rs  bluetooth.rs  buffer.rs  context_menu.rs  cursor.rs  launcher.rs  main.rs  network_popup.rs  notification_popup.rs  panel.rs  panel_view.rs  popup_card.rs  power_footer.rs  printers.rs  settings_view.rs  soft_shadow.rs  status_notifier.rs  status_notifier_popup.rs  sysinfo.rs  thumbnail_popup.rs  ui_preview.rs  updates.rs  users.rs  widget_action.rs  widget_traversal.rs  workspaces.rs
crates/meridian-shell/src/draw/: bitmap.rs  fc.rs  ft.rs  mod.rs  painter.rs  text.rs
crates/meridian-shell/src/icons/: cache.rs  loader.rs  mod.rs  rcc.rs  svg.rs  theme_index.rs
crates/meridian-shell/src/network/: mod.rs  nmcli.rs
crates/meridian-shell/src/notifications/: dbus.rs  mod.rs  state.rs
crates/meridian-shell/src/ui/: mod.rs  primitives.rs  tokens.rs
crates/meridian-shell/src/wayland/: calendar.rs  init.rs  ipc.rs  mod.rs  render.rs  screencopy.rs  shell.rs  state.rs  time.rs  types.rs
crates/meridian-shell/src/wayland/handlers/: compositor.rs  keyboard.rs  layer.rs  mod.rs  output.rs  pointer.rs  pointer_state.rs  pointer_translate.rs  seat.rs  shm.rs  widget_dispatch.rs
crates/meridian-ui/: Cargo.toml
crates/meridian-ui/src/: lib.rs
crates/meridian-ui/src/effect/: border.rs  dominant_color.rs  fill.rs  metro_surface.rs  mod.rs  radius.rs  (+1 more)
crates/meridian-wm/: Cargo.toml
crates/meridian-wm/src/: floating.rs  lib.rs  tiling.rs  window.rs  workspace.rs
docs/: ARCHITECTURE.md  AUDIT_2026-05-25.md  CODE_STYLE.md  CONFIGURATION.md  DEBUGGING.md  DESKTOP_SETTINGS_CONTRACT.md  MERIDIAN_LOGIN.md  MULTI_MONITOR.md  NVIDIA_PASSTHROUGH.md  PERFORMANCE_RULES.md  PROJECT_STATUS.md  TASK_TEMPLATE.md  TESTING.md  VISUAL_PERFORMANCE.md  WORKSPACES.md  XDG_PORTALS.md  design-manifesto.md  technical-design-guidelines.md
packaging/pam/: meridian-login-password
packaging/xdg-autostart/: meridian-polkit-agent.desktop
scripts/: gen-meridian-theme.py  meridian-file-picker  release-changelog.sh  smoke-drm.sh  test-login-uinput.py
src/: main.rs
themes/catppuccin-latte/: theme.toml
themes/catppuccin-mocha/: theme.toml
themes/earth-cream/: theme.toml
themes/meridian/: theme.toml
themes/meridian-light/: theme.toml
themes/solarized-dark/: theme.toml
(+21 files in other folders)
