[workspace]
members = [
    ".",
    "crates/meridian-compositor",
    "crates/meridian-wm",
    "crates/meridian-shell",
    "crates/meridian-ipc",
    "crates/meridian-config",
    "crates/meridian-portal",
]

[workspace.dependencies]
bitflags = "2"
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "060e9cd9c8ae2633947bdb72cffa1748ac53922d", features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_winit",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "meridian"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
meridian-compositor = { path = "crates/meridian-compositor" }
smithay = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
