[package]
name = "meridian-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
libc = "0.2"
meridian-config = { path = "../meridian-config" }
meridian-ipc = { path = "../meridian-ipc" }
meridian-wm = { path = "../meridian-wm" }
smallvec = "1"
smithay = { workspace = true }
tracing = { workspace = true }
