[package]
name = "meridian-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
meridian-config = { path = "../meridian-config" }
meridian-ipc = { path = "../meridian-ipc" }
meridian-wm = { path = "../meridian-wm" }
smallvec = "1"
smithay = { workspace = true }
tracing = { workspace = true }
xcursor = { version = "0.3", optional = true }

[features]
default = ["xcursor-themes"]
xcursor-themes = ["dep:xcursor"]

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
