[package]
name = "meridian-compositor"
version.workspace = true
edition = "2021"

[dependencies]
bitflags = { workspace = true }
cgmath = "0.18"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
meridian-config = { path = "../meridian-config" }
meridian-ipc = { path = "../meridian-ipc" }
meridian-wm = { path = "../meridian-wm" }
meridian-compass-render = { path = "../meridian-compass-render" }
meridian-boot-common = { path = "../meridian-boot-common" }
tiny-skia = { workspace = true }
smallvec = "1"
smithay = { workspace = true }
tracing = { workspace = true }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
xcursor = { version = "0.3", optional = true }

[features]
default = ["xcursor-themes"]
xcursor-themes = ["dep:xcursor"]

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
