[package]
name = "meridian-login"
version = "0.1.0"
edition = "2021"

[dependencies]
drm = "0.15"
evdev = "0.13"
meridian-compass-render = { path = "../meridian-compass-render" }
pam = { version = "0.8", features = ["client"] }
tiny-skia = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xkbcommon = "0.8"
zeroize = "1"
