[package]
name = "meridian-login"
version = "0.1.0"
edition = "2021"

[dependencies]
drm = "0.15"
evdev = "0.13"
libc = "0.2"
meridian-compass-render = { path = "../meridian-compass-render" }
nix = { version = "0.29", features = ["user", "fs"] }
pam-sys = "1.0.0-alpha5"
tiny-skia = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xkbcommon = "0.8"
zeroize = "1"
