[package]
name = "meridian-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
meridian-ipc = { path = "../meridian-ipc" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
