[package]
name = "meridian-portal"
version.workspace = true
edition = "2021"

[dependencies]
meridian-ipc = { path = "../meridian-ipc" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
