[package]
name = "meridian-shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meridian-shell"
path = "src/main.rs"

[dependencies]
libc = "0.2"
meridian-config = { path = "../meridian-config" }
meridian-ipc = { path = "../meridian-ipc" }
png = { version = "0.17", default-features = false }
resvg = { version = "0.45", default-features = false }
ruzstd = "0.7"
serde_json = "1"
smithay-client-toolkit = "0.19"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
